err/django-chronograph-ispm-new.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chronograph'...
Listing './lib/python3.5/site-packages/chronograph/compatibility'...
Listing './lib/python3.5/site-packages/chronograph/fixtures'...
Listing './lib/python3.5/site-packages/chronograph/management'...
Listing './lib/python3.5/site-packages/chronograph/management/commands'...
Compiling './lib/python3.5/site-packages/chronograph/models.py'...
***   File "./lib/python3.5/site-packages/chronograph/models.py", line 340
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chronograph/templates'...
Listing './lib/python3.5/site-packages/chronograph/templates/chronograph'...
Listing './lib/python3.5/site-packages/chronograph/templatetags'...
Compiling './lib/python3.5/site-packages/chronograph/templatetags/chronograph_tags.py'...
***   File "./lib/python3.5/site-packages/chronograph/templatetags/chronograph_tags.py", line 32
    raise template.TemplateSyntaxError, "%r tag requires one argument" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chronograph/tests'...
Compiling './lib/python3.5/site-packages/chronograph/tests/commands.py'...
***   File "./lib/python3.5/site-packages/chronograph/tests/commands.py", line 19
    print "Job ran for %f seconds" % (end_time-start_time)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_chronograph_ispm_new-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
